@@ -93,9 +93,8 @@ const parseUserPlantations = (
             `**${ctx.locale('commands:fazendinha.plantations.field', {
               index: i + 1,
               emojis: prependTitle,
-            })}**`,
+            })}**\n${fieldText}`,
           ),
-          createTextDisplay(fieldText),
         ],
         accessory: createButton({
           label: ctx.locale(
@@ -213,14 +212,11 @@ const displayPlantations = async (
           createTextDisplay(
             `### ${ctx.locale('commands:fazendinha.plantations.embed-title', {
               user: getDisplayName(ctx.user),
-            })}`,
-          ),
-          createTextDisplay(
-            ctx.locale('commands:fazendinha.plantations.description', {
+            })}\n${ ctx.locale('commands:fazendinha.plantations.description', {
               season: ctx.locale(`commands:fazendinha.seasons.${seasonalInfo.currentSeason}`),
               unix: millisToSeconds(seasonalInfo.endsAt),
               emoji: SeasonEmojis[seasonalInfo.currentSeason],
-            }),
+            })}`,
           ),
         ],
         accessory: createThumbnail({ url: getUserAvatar(ctx.user, { enableGif: true }) }),
